--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
             </div>
             <div class="right-header-container">
                 <a href="{{site.about_url}}"> {{ site.about_title }} </a>
+                </div>
+            <div class="right-header-container">
+                <a href="{{site.contact_url}}"> {{ site.contact_title }} </a>
             </div>
         </div>
     </div>
