--- a/_layouts/libros.html
+++ b/_layouts/libros.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
   {% include head.html %}
   <body class="d-none">
       <div class="flex-container">
           {% include header.html %}
-          {{ content }}
+          <div class="wrapper">
+          {% include books.html %}
+          </div>
       </div>
       {% include footer.html %}
   </body>
