--- a/_includes/books.html
+++ b/_includes/books.html
@@ -2,7 +2,7 @@
 
 <h1>{{ page.title }} | {{page.subtitle}}</h1>
 <div class="image-wrapper">
-<img class="book-image" src="{{ page.picture }}" alt="foto de {{ page.title | downcase }}">
+<img class="book-image" src={{site.baseurl}}"/assets/img/{{ page.image }}" alt="foto de {{ page.title | downcase }}">
 <div class="info_libro">
 <p class="subject {{ page.subject | downcase }}"> <b>Género:</b>
   {{ page.subject }}
