--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,18 +2,16 @@
     <div class="wrapper">
         <div class="header-flex">
             <div class="left-header-container">
-                <a href="{{site.projects_url}}"> {{ site.projects_title }} </a>
+                 <a href="{{site.about_url}}"> {{ site.about_title }} </a>
             </div>
             <div class="center-header-container">
                 <div class="logo">
-                    <div class="author-name">{{ site.author }}</div>
+                    <div class="author-name"><a href="{{site.projects_url}}" style="color:black;">{{ site.author }}</a></div>
                     <div class="author-title">{{ site.author_title }}</div>
                 </div>
                 {% include social-links.html %}
             </div>
-            <div class="right-header-container">
-                <a href="{{site.about_url}}"> {{ site.about_title }} </a>
-                </div>
+
             <div class="right-header-container">
                 <a href="{{site.contact_url}}"> {{ site.contact_title }} </a>
             </div>
