añadir tags.html 2 libros.html tenmplate

--- a/_layouts/libros.html
+++ b/_layouts/libros.html
@@ -6,6 +6,7 @@
       <div class="flex-container">
           {% include header.html %}
           <div class="wrapper">
+          {% include tag-filters.html %}
           {% include books.html %}
           </div>
       </div>
