--- a/_layouts/contact-form.html
+++ b/_layouts/contact-form.html
@@ -15,3 +15,7 @@ layout: default-with-header
 {% include contact-form.html %}
 </div>
 </div>
+<script src="//unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+<script src="//unpkg.com/isotope-packery@2.0.1/packery-mode.pkgd.js"></script>
+<script src="//unpkg.com/imagesloaded@4.1.4/imagesloaded.pkgd.js"></script>
+<script src="/assets/js/main.js"></script>
